# buongiornissimo-discord

./: Cargo.toml  README.md
src/: bot.rs  client.rs  main.rs  worker.rs
src/bot/: response.rs
